# bellman_ce

./: Cargo.toml  README.md
src/: domain.rs  lib.rs  locks.rs  log.rs  multicore.rs  multiexp.rs
src/gpu/: fft.rs  locks.rs  multiexp.rs  nogpu.rs  sources.rs
src/kate_commitment/: mod.rs
src/plonk/: mod.rs  utils.rs
src/plonk/better_better_cs/: cs.rs  cs_old.rs  data_structures.rs  lookup_tables.rs  utils.rs
src/plonk/better_better_cs/proof/: mod.rs
src/plonk/better_better_cs/redshift/: multioracle.rs  prover.rs  setup.rs
src/plonk/better_better_cs/redshift/simple_fri/: verifier.rs
src/plonk/better_better_cs/setup/: mod.rs
src/plonk/better_better_cs/trees/: binary_tree.rs
src/plonk/better_cs/: adaptor.rs  fma_adaptor.rs  generator.rs  keys.rs  utils.rs  verifier.rs
src/plonk/better_cs/prover/: mod.rs  prove_steps.rs
src/plonk/commitments/: mod.rs
src/plonk/commitments/transparent/: mod.rs
src/plonk/commitments/transparent/fri/: mod.rs
src/plonk/commitments/transparent/fri/coset_combining_fri/: fri.rs  mod.rs  precomputation.rs  (+1 more)
src/plonk/commitments/transparent/iop/: blake2s_trivial_iop.rs  keccak_trivial_iop.rs
src/plonk/commitments/transparent/iop_compiler/: coset_combining_blake2s_tree.rs
src/plonk/commitments/transparent/precomputations/: mod.rs
src/plonk/cs/: mod.rs
src/plonk/domains/: mod.rs
src/plonk/fft/: fft.rs  mod.rs  prefetch_fft.rs  prefetch_lde.rs
src/plonk/fft/cooley_tukey_ntt/: mod.rs  partial_reduction.rs
src/plonk/fft/radix_4/: mod.rs
src/plonk/fft/with_precomputation/: fft.rs  lde.rs
src/plonk/generator/: mod.rs
src/plonk/plonk/: generator.rs  prover.rs
src/plonk/polynomials/: mod.rs
src/plonk/prover/: homomorphic.rs  mod.rs
src/plonk/tester/: mod.rs
src/plonk/transparent_engine/: mod.rs  proth.rs
src/plonk/verifier/: mod.rs
src/tests/: mod.rs
tests/: mimc.rs
(+3 files in other folders)
