[package]
authors = ["zhonglin"]
description = "plonk library with filcoin gpu"
homepage = "https://github.com/zhonglinlynn/bellman_ce.git"
license = "MIT/Apache-2.0"
name = "bellman_gpu"
repository = "https://github.com/zhonglinlynn/bellman_ce.git"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
rand = "0.4"
rand_core = "0.5"
bit-vec = "0.6"
cfg-if = "1.*"
log = "0.4.8"
thiserror = "1.0.10"
rayon = "1.3.0"
# pairing = {package = "pairing_ce", version = "0.24.*" }
pairing = {git = "https://github.com/zhonglinlynn/pairing.git", branch = "for_pairing_new_name"}
ec-gpu-gen = {git = "https://github.com/zhonglinlynn/ec-gpu.git", branch = "for_pairing_0.24.2"}

byteorder = "1"
crossbeam-channel = "0.5.0"

futures = {package = "futures", version = "0.3", default_features = false, features = ["executor"]}
num_cpus = "1"
crossbeam = {version = "0.7", optional = true}
prefetch = {version = "0.2", optional = true}

tiny-keccak = {version = "1.5", optional = true}
blake2-rfc = {version = "0.2.18", optional = true}

blake2s_simd = {version = "0.5"}
lazy_static = {version = "1", optional = true}

blake2s_const = {version = "0.6", optional = true, path = "./src/plonk/blake2_const/blake2s/"}

hex = "*"

# gpu feature
rust-gpu-tools = { version = "0.3.0", optional = true }
ff-cl-gen = { git = "https://github.com/zhonglinlynn/ff-cl-gen.git", branch="master", version = "0.2.0", optional = true }

fs2 = { version = "0.4.3", optional = true }

env_logger = "0.8.1"

[dev-dependencies]
rand_xorshift = "0.2"

[features]
default = ["gpu", "plonk"]
multicore = ["crossbeam", "futures/thread-pool"]
nolog = []
plonk = ["lazy_static", "tiny-keccak", "blake2s_const"]
gpu = ["rust-gpu-tools", "ff-cl-gen", "fs2"]